Fix some css spacing

--- a/src/html/css/kanban.css
+++ b/src/html/css/kanban.css
@@ -62,7 +62,7 @@ article .article-header {
    100% { opacity: 1; }
 }
 
-article * {
+h1,h2,h3,h4,h5,h6,p,section,form {
    margin: 0.5rem 0;
 }
 
